--- a/demo/src/main/resources/templates/hello.html
+++ b/demo/src/main/resources/templates/hello.html
@@ -6,12 +6,8 @@
 </head>
 <body>
 <h1>Chỉ ai đăng nhập mới truy cập được trang này</h1>
-<form th:action="@{/logout}"method="post">
+<form method="post" th:action="@{/logout}">
     <input type="submit" value="Sign out"/>
 </form>
-
-
-
 </body>
-
 </html>
