--- a/demo/src/main/resources/templates/login.html
+++ b/demo/src/main/resources/templates/login.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Demo</title>
-    <link th:href="@{/style.css}" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" th:href="@{/style.css}">
+    <link href="https://fonts.googleapis.com" rel="preconnect">
+    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -79,9 +79,7 @@
                 </div>
                 <div class="right"></div>
             </div>
-            <span class="forgot-your-password">
-<p>Forgot your password?</p>
-            </span>
+            <span class="forgot-your-password"><p>Forgot your password?</p></span>
         </form>
         <div class="logo-wolf">
             <img alt="" src="img/data-logo-robowolf.svg">
@@ -93,7 +91,5 @@
         </div>
     </div>
 </div>
-
 </body>
-
 </html>
