--- a/demo/src/main/resources/templates/input.html
+++ b/demo/src/main/resources/templates/input.html
@@ -5,20 +5,19 @@
     <title>CreateUser</title>
 </head>
 <body>
-<form th:action="@{/signin}" method="post">
+<form method="post" th:action="@{/signin}">
     <div>
-    <div>Username</div>
-    <div><input type="text"name="username" placeholder="username"/></div>
+        <div>Username</div>
+        <div><input name="username" placeholder="username" type="text"/></div>
     </div>
     <div>
         <div>Password</div>
-       <div> <input type="text" name="password" placeholder="password"/></div>
+        <div><input name="password" placeholder="password" type="text"/></div>
     </div>
     <div>
         <input type="submit" value="Create"/>
-        
+
     </div>
 </form>
-
 </body>
 </html>
