--- a/demo/src/main/resources/templates/input.html
+++ b/demo/src/main/resources/templates/input.html
@@ -5,7 +5,7 @@
     <title>CreateUser</title>
 </head>
 <body>
-<form method="post" th:action="@{/signin}">
+<form method="post" th:action="@{/register}">
     <div>
         <div>Username</div>
         <div><input name="username" placeholder="username" type="text"/></div>
