--- a/demo/src/main/resources/templates/input.html
+++ b/demo/src/main/resources/templates/input.html
@@ -12,7 +12,7 @@
     </div>
     <div>
         <div>Password</div>
-        <div><input name="password" placeholder="password" type="text"/></div>
+        <div><input name="password" placeholder="password" type="password"/></div>
     </div>
     <div>
         <input type="submit" value="Create"/>
